--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.23.4",
     "graphql": "^15.5.0",
+    "import-cwd": "^3.0.0",
     "jwt-decode": "^3.1.2",
     "postcss": "^8.4.17",
     "react": "^17.0.2",
